cmake_minimum_required(VERSION 3.3)

project(common_controls)
find_package(xtd.forms REQUIRED)

add_projects(
  button
  buttons
  check_box
  check_boxes
  checked_list_box
  choice
  combo_box
  control
  domain_up_down
  label
  list_box
  numeric_up_down
  picture_box
  progress_bar
  radio_button
  radio_buttons
  splitter
  text_box
  track_bar
  up_down_button
  user_control
)
