cmake_minimum_required(VERSION 3.3)

project(xtd.forms.common.dialogs.examples)

add_subdirectory(about_dialog)
add_subdirectory(color_dialog)
add_subdirectory(folder_browser_dialog)
add_subdirectory(font_dialog)
add_subdirectory(message_box)
add_subdirectory(open_file_dialog)
add_subdirectory(save_file_dialog)
