cmake_minimum_required(VERSION 3.3)

project(xtd.forms.common_controls.examples)

add_subdirectory(button)
add_subdirectory(check_box)
add_subdirectory(checked_list_box)
add_subdirectory(combo_box)
add_subdirectory(control)
add_subdirectory(label)
add_subdirectory(list_box)
add_subdirectory(progress_bar)
add_subdirectory(radio_button)
add_subdirectory(text_box)
add_subdirectory(track_bar)
add_subdirectory(user_control)
